# ServerEngine

./: .gitignore  CMakeLists.txt  README.md  build.sh  buildex.sh  nohup.out  start.sh  stop.sh
account/: CMakeLists.txt  accountServer.cpp
accountServer/: CMakeLists.txt  accountManager.cpp  accountManager.h  accountServer.cpp  accountServer.h  dbData.h
client/: CMakeLists.txt  client.cpp  client.h
example/: CMakeLists.txt  chatServer.cpp  chatServer.h  client.cpp  client2.cpp  gameServer.cpp  gameServer.h
gameServer/: CMakeLists.txt  gameServer.cpp  gameServer.h  player.cpp  player.h  playerManager.cpp  playerManager.h
gate/: CMakeLists.txt  gateServer.cpp  gateServer.h
gateServer/: CMakeLists.txt  Makefile  cmake_install.cmake  gateServer.cpp  gateServer.h
lib/: CMakeLists.txt  CommonFunc.cpp  CommonFunc.h  Connection.cpp  Connection.h  ConnectionManager.cpp  ConnectionManager.h  CppMysql.cpp  CppMysql.h  CritSec.h  Log.cpp  Log.h  Platform.h  ThreadPool.cpp  ThreadPool.h  atomic_ops.h  atomic_ops.h.gch  buffer.h  buffer.h.gch  configFile.cpp  configFile.h  dataBase.cpp  dataBase.h  double_d_array.h  field.h  memoryPool.cpp  memoryPool.h  messageQueue.cpp  messageQueue.h  mysql_control.h  netpack.h  nocopyable.h  nocopyable.h.gch  package.h  serviceBase.cpp  serviceBase.h  testThread.cpp_bak  type_define.h  utility.h
proto/: msgId.proto  player.proto  test.proto
protoFiles/: CMakeLists.txt  msgId.pb.cc  msgId.pb.h  player.pb.cc  player.pb.h  test.pb.cc  test.pb.h
